# p3

./: CMakeLists.txt  README.md  glad.c  main.cpp  shader.h
include/glad/include/glad/: glad.h
shader_files/: functions.js  layout.css
